[package]
name = "transaction_parser"
version = "0.1.0"
authors = ["Vlad Toma <vlad.2hex.toma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "^1.0.126", features = ["derive"]}
serde_derive = "^1.0.126"
csv = "^1.1.6"
